fix: Main struct element display property
Problem
The main element with the class 'main-struct' not showing properly on
screens with the width range from 320px to 863px.

Solution
Change 'display' property of 'main-struct' class to 'block'
from 'grid'.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,8 +137,7 @@
   }
 
   .main-struct {
-    display: grid;
-    grid-template-rows: 4% 1fr;
+    display: block;
     overflow: hidden;
   }
 
